# Inventory_optimization_And_Sales_Forecasting

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
dashboard/: forecast_dashboard.json  grafana_app.py  streamlit_app.py
dashboard/grafana/provisioning/dashboards/: forecast_dashboard.json
etl/utils/: lake_to_warehouse.py
grafana/dashboards/: forecast_dashboard.json  forecast_sales_dashboard.json  full_dashboard.json
grafana/provisioning/dashboards/: dashboards.yml  forecast_dashboard.json
grafana/provisioning/datasources/: forecast.yml
ingestion/: consumer.py  producer_raw.py
ingestion/synthetic_output/customer_traffic/year=2023/month=01/day=01/: traffic_2023-01-01.parquet
ingestion/synthetic_output/customer_traffic/year=2023/month=01/day=02/: traffic_2023-01-02.parquet
ingestion/synthetic_output/customer_traffic/year=2023/month=01/day=03/: traffic_2023-01-03.parquet
ingestion/synthetic_output/customer_traffic/year=2023/month=01/day=04/: traffic_2023-01-04.parquet
ingestion/synthetic_output/customer_traffic/year=2023/month=01/day=05/: traffic_2023-01-05.parquet
ingestion/synthetic_output/customer_traffic/year=2023/month=01/day=06/: traffic_2023-01-06.parquet
ingestion/synthetic_output/inventory/year=2023/week=52/: inventory_2023-01-01.parquet
ingestion/synthetic_output/metadata/: generation_metadata.parquet
ingestion/synthetic_output/promotions/: promotions.parquet
ingestion/synthetic_output/store_events/: events.parquet
models/: forecasting.py  test.py
warehouse/: schema.sql  servers.json
(+6 files in other folders)
